# dryft

./: .build.conf.example  .gclient  .gitignore  CLAUDE.md  DRYFT_README.md  IMPLEMENTATION_TASKS.md  ISSUE_B8_COMPLETION_SUMMARY.md  ISSUE_C3_COMPLETION_SUMMARY.md  Makefile  README.md  SECURITY_FIX_PASSPHRASE.md  TUNGSTEN_README.md  build.py  dryft_args.gn  setup_tungsten.sh  test_build_system.py  tungsten_args.gn
src/chrome/browser/blossom/: BUILD.gn
src/chrome/browser/nostr/: BUILD.gn  BUILD_full.gn  KEY_STORAGE_README.md  MACOS_KEY_STORAGE.md  WINDOWS_KEY_STORAGE.md  extension_migration_service.cc  extension_migration_service.h  extension_migration_service_factory.cc  extension_migration_service_factory.h  extension_migration_service_unittest.cc  file_fallback_storage.cc  file_fallback_storage.h  key_encryption.cc  key_encryption.h  key_encryption_unittest.cc  key_storage_factory.cc  key_storage_factory.h  key_storage_in_memory.cc  key_storage_in_memory.h  key_storage_integration_unittest.cc  key_storage_interface.h  key_storage_linux.cc  key_storage_linux.h  key_storage_linux_unittest.cc  key_storage_mac.h  key_storage_mac.mm  key_storage_mac_unittest.cc  key_storage_windows.cc  key_storage_windows.h  key_storage_windows_unittest.cc  mac_keychain_manager.h  mac_keychain_manager.mm  multi_account_service_test.cc  nostr_browser_utils.cc  nostr_browser_utils.h  nostr_input_validator.cc  nostr_input_validator.h  nostr_input_validator_unittest.cc  nostr_operation_rate_limiter.cc  nostr_operation_rate_limiter.h  (+17 more)
src/chrome/browser/nostr/integration_tests/: BUILD.gn  README.md  blossom_integration_browsertest.cc  mock_local_relay_service.cc  mock_local_relay_service.h  mock_nostr_service.cc  mock_nostr_service.h  nostr_api_integration_test.cc  nostr_e2e_browsertest.cc  nostr_integration_test_base.cc  nostr_integration_test_base.h  nostr_ipc_integration_test.cc  nostr_key_management_browsertest.cc  nostr_permission_flow_browsertest.cc  nostr_protocol_handler_integration_test.cc  nostr_ui_to_backend_integration_test.cc  nsite_navigation_browsertest.cc  run_tests.sh  test_helpers.cc  test_helpers.h
src/chrome/browser/nostr/local_relay/: BUILD.gn  README_UI_INTEGRATION.md  connection_manager.cc  connection_manager.h  event_storage.cc  event_storage.h  event_storage_unittest.cc  local_relay_config.cc  local_relay_config.h  local_relay_config_unittest.cc  local_relay_service.cc  local_relay_service.h  local_relay_service_factory.cc  local_relay_service_factory.h  local_relay_service_unittest.cc  nostr_database.cc  nostr_database.h  nostr_database_migration.cc  nostr_database_migration.h  nostr_database_schema.h  nostr_database_unittest.cc  protocol_handler.cc  protocol_handler.h  query_engine.cc  query_engine.h  query_engine_unittest.cc
src/chrome/browser/nostr/nsite/: BUILD.gn  nsite_cache_manager.cc  nsite_cache_manager.h  nsite_cache_manager_unittest.cc  nsite_header_injector.cc  nsite_header_injector.h  nsite_header_injector_unittest.cc  nsite_internals_ui.cc  nsite_internals_ui.h  nsite_metrics.cc  nsite_metrics.h  nsite_notification_manager.cc  nsite_notification_manager.h  nsite_notification_manager_unittest.cc  nsite_performance_test.cc  nsite_security_utils.cc  nsite_security_utils.h  nsite_security_utils_unittest.cc  nsite_service.cc  nsite_service.h  nsite_streaming_server.cc  nsite_streaming_server.h  nsite_streaming_server_unittest.cc  nsite_update_monitor.cc  nsite_update_monitor.h  nsite_update_monitor_unittest.cc
src/chrome/browser/nostr/performance/: BUILD.gn  README.md  ci_performance_integration.sh  dryft_performance_metrics.cc  dryft_performance_metrics.h  dryft_performance_test.cc  library_loading_performance_test.cc  local_relay_performance_test.cc  nip07_performance_test.cc  run_performance_tests.py  tungsten_performance_metrics.cc  (+2 more)
src/chrome/browser/nsite/: BUILD.gn
src/chrome/browser/resources/: BUILD.gn  nostr_libraries_browsertest.cc  nostr_migration_resources.grd  nostr_resource_handler.cc  nostr_resource_handler.h  nostr_resource_handler_unittest.cc  nostr_resources.grd
src/chrome/common/: BUILD.gn  chrome_content_client.cc  chrome_content_client.h  dryft_url_constants.cc  dryft_url_constants.h  features.gni  nostr_message_router.cc  nostr_message_router.h  nostr_message_router_relay.cc  nostr_message_start.h  nostr_messages.cc  nostr_messages.h  nostr_messages_browsertest.cc  nostr_messages_unittest.cc  nostr_scheme.cc  nostr_scheme.h  tungsten_url_constants.cc  tungsten_url_constants.h
src/chrome/installer/: BUILD.gn
src/chrome/installer/windows/: nostr_protocol_associations.cc  nostr_protocol_associations.h  nostr_protocol_associations_unittest.cc
src/chrome/test/: BUILD.gn
src/components/blossom/: BUILD.gn  README.md  authorization_manager.h  blossom_authorization_manager.cc  blossom_authorization_manager.h  blossom_authorization_manager_unittest.cc  blossom_content_resolver.cc  blossom_content_resolver.h  blossom_content_resolver_unittest.cc  blossom_request_handler.cc  blossom_request_handler.h  blossom_server.cc  blossom_server.h  blossom_server_unittest.cc  blossom_storage.cc  blossom_storage.h  blossom_storage_unittest.cc  blossom_user_server_manager.cc  blossom_user_server_manager.h  blossom_user_server_manager_unittest.cc
src/components/nostr/: BUILD.gn  features.cc  features.h  nostr_event.cc  nostr_event.h  nostr_filter.cc  nostr_filter.h  nostr_test.cc
src/components/nostr/bech32/: bech32_decoder.cc  bech32_decoder.h  bech32_decoder_unittest.cc
src/content/renderer/nostr/: BUILD.gn  blossom_bindings.cc  blossom_bindings.h  blossom_bindings_unittest.cc  multi_account_test.cc  nip07_integration_test.cc  nostr_accounts_bindings.cc  nostr_accounts_bindings.h  nostr_accounts_bindings_unittest.cc  nostr_bindings.cc  nostr_bindings.h  nostr_bindings_unittest.cc  nostr_injection.cc  nostr_injection.h  nostr_injection_browsertest.cc  nostr_libs_bindings.cc  nostr_libs_bindings.h  nostr_libs_bindings_unittest.cc  nostr_relay_bindings.cc  nostr_relay_bindings.h  nostr_relay_bindings_unittest.cc  nostr_relay_integration_test.cc
(+170 files in other folders)
