# Copyright 2024 The Tungsten Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")

component("blossom") {
  sources = [
    "blossom_storage.cc",
    "blossom_storage.h",
  ]

  deps = [
    "//base",
    "//crypto",
    "//net",
  ]

  defines = [ "IS_BLOSSOM_IMPL" ]
}

source_set("unit_tests") {
  testonly = true
  
  sources = [
    "blossom_storage_unittest.cc",
  ]
  
  deps = [
    ":blossom",
    "//base",
    "//base/test:test_support",
    "//crypto",
    "//testing/gtest",
  ]
}