# Copyright 2024 The Tungsten Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")

component("blossom") {
  sources = [
    "authorization_manager.h",
    "blossom_request_handler.cc",
    "blossom_request_handler.h",
    "blossom_server.cc",
    "blossom_server.h",
    "blossom_storage.cc",
    "blossom_storage.h",
  ]

  deps = [
    "//base",
    "//crypto",
    "//net",
    "//net/server:http_server",
  ]

  defines = [ "IS_BLOSSOM_IMPL" ]
}

source_set("unit_tests") {
  testonly = true
  
  sources = [
    "blossom_server_unittest.cc",
    "blossom_storage_unittest.cc",
  ]
  
  deps = [
    ":blossom",
    "//base",
    "//base/test:test_support",
    "//crypto",
    "//net",
    "//net:test_support",
    "//testing/gtest",
  ]
}