# Copyright 2024 The dryft Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")

component("blossom") {
  sources = [
    "authorization_manager.h",
    "blossom_authorization_manager.cc",
    "blossom_authorization_manager.h",
    "blossom_content_resolver.cc",
    "blossom_content_resolver.h",
    "blossom_request_handler.cc",
    "blossom_request_handler.h",
    "blossom_server.cc",
    "blossom_server.h",
    "blossom_storage.cc",
    "blossom_storage.h",
    "blossom_user_server_manager.cc",
    "blossom_user_server_manager.h",
  ]

  deps = [
    "//base",
    "//components/nostr",
    "//crypto",
    "//net",
    "//net/server:http_server",
    "//third_party/boringssl",
    "//url",
  ]

  defines = [ "IS_BLOSSOM_IMPL" ]
}

source_set("unit_tests") {
  testonly = true
  
  sources = [
    "blossom_authorization_manager_unittest.cc",
    "blossom_content_resolver_unittest.cc",
    "blossom_server_unittest.cc",
    "blossom_storage_unittest.cc",
    "blossom_user_server_manager_unittest.cc",
  ]
  
  deps = [
    ":blossom",
    "//base",
    "//base/test:test_support",
    "//components/nostr",
    "//crypto",
    "//net",
    "//net:test_support",
    "//testing/gtest",
    "//third_party/boringssl",
    "//url",
  ]
}