# Copyright 2024 The Tungsten Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")
import("//chrome/common/features.gni")
import("//components/nostr/BUILD.gn")
import("//tools/grit/grit_rule.gni")

if (enable_nostr) {
  source_set("nostr_resource_handler") {
    sources = [
      "nostr_resource_handler.cc",
      "nostr_resource_handler.h",
    ]

    deps = [
      "//base",
      "//chrome/browser/profiles",
      "//chrome/grit:nostr_resources_grit",
      "//content/public/browser",
      "//net",
      "//ui/base",
      "//url",
    ]
  }

  # Copy Nostr libraries from third_party
  copy("ndk_lib") {
    sources = [ "//third_party/nostr/ndk-2.0.0.min.js" ]
    outputs = [ "$target_gen_dir/nostr/ndk.js" ]
  }
  
  copy("nostr_tools_lib") {
    sources = [ "//third_party/nostr/nostr-tools-1.17.0.min.js" ]
    outputs = [ "$target_gen_dir/nostr/nostr-tools.js" ]
  }
  
  copy("applesauce_lib") {
    sources = [ "//third_party/nostr/applesauce-0.5.0.min.js" ]
    outputs = [ "$target_gen_dir/nostr/applesauce.js" ]
  }
  
  copy("nostrify_lib") {
    sources = [ "//third_party/nostr/nostrify-1.2.0.min.js" ]
    outputs = [ "$target_gen_dir/nostr/nostrify.js" ]
  }
  
  copy("alby_sdk_lib") {
    sources = [ "//third_party/nostr/alby-sdk-3.0.0.min.js" ]
    outputs = [ "$target_gen_dir/nostr/alby-sdk.js" ]
  }
  
  # Group all library copies
  group("bundle_nostr_libraries") {
    deps = [
      ":ndk_lib",
      ":nostr_tools_lib",
      ":applesauce_lib",
      ":nostrify_lib",
      ":alby_sdk_lib",
    ]
  }

  # Generate the resource pack
  grit("nostr_resources_grit") {
    source = "nostr/nostr_resources.grd"
    outputs = [
      "grit/nostr_resources.h",
      "nostr_resources.pak",
    ]
    
    deps = [ ":bundle_nostr_libraries" ]
  }

  source_set("nostr_resource_handler_unittests") {
    testonly = true
    sources = [ "nostr_resource_handler_unittest.cc" ]

    deps = [
      ":nostr_resource_handler",
      "//base",
      "//chrome/grit:nostr_resources_grit",
      "//net",
      "//testing/gtest",
      "//url",
    ]
  }
  
  source_set("nostr_libraries_browsertests") {
    testonly = true
    sources = [ "nostr_libraries_browsertest.cc" ]
    
    deps = [
      ":nostr_resource_handler",
      "//base",
      "//chrome/browser/ui",
      "//chrome/grit:nostr_resources_grit",
      "//chrome/test:test_support",
      "//content/test:test_support",
      "//net/test:test_support",
      "//testing/gtest",
      "//url",
    ]
    
    defines = [ "ENABLE_NOSTR=1" ]
  }
}