# Copyright 2024 The dryft Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")
import("//chrome/common/features.gni")
import("//components/nostr/BUILD.gn")
import("//tools/grit/grit_rule.gni")

if (enable_nostr) {
  source_set("nostr_resource_handler") {
    sources = [
      "nostr_resource_handler.cc",
      "nostr_resource_handler.h",
    ]

    deps = [
      "//base",
      "//chrome/browser/profiles",
      "//chrome/grit:nostr_resources_grit",
      "//content/public/browser",
      "//net",
      "//ui/base",
      "//url",
    ]
  }

  # Bundle the Nostr libraries
  action("bundle_nostr_libraries") {
    script = "nostr/bundle_libraries.py"
    
    sources = [
      "nostr/third_party/ndk-2.0.0.js",
      "nostr/third_party/nostr-tools-1.17.0.js",
      "nostr/third_party/applesauce-core-0.3.4.js",
      "nostr/third_party/applesauce-content-0.3.4.js",
      "nostr/third_party/applesauce-lists-0.3.4.js",
      "nostr/third_party/alby-sdk-3.0.0.js",
    ]
    
    outputs = [
      "$target_gen_dir/nostr/ndk.js",
      "$target_gen_dir/nostr/nostr-tools.js",
      "$target_gen_dir/nostr/applesauce-core.js",
      "$target_gen_dir/nostr/applesauce-content.js",
      "$target_gen_dir/nostr/applesauce-lists.js",
      "$target_gen_dir/nostr/alby-sdk.js",
    ]
    
    args = [
      "--optimize",
      "--source-map",
      "--input-dir", rebase_path("nostr/third_party", root_build_dir),
      "--output-dir", rebase_path("$target_gen_dir/nostr", root_build_dir),
    ]
  }

  # Generate the resource pack
  grit("nostr_resources_grit") {
    source = "nostr/nostr_resources.grd"
    outputs = [
      "grit/nostr_resources.h",
      "nostr_resources.pak",
    ]
    
    deps = [ ":bundle_nostr_libraries" ]
  }

  source_set("nostr_resource_handler_unittests") {
    testonly = true
    sources = [ "nostr_resource_handler_unittest.cc" ]

    deps = [
      ":nostr_resource_handler",
      "//base",
      "//chrome/grit:nostr_resources_grit",
      "//net",
      "//testing/gtest",
      "//url",
    ]
  }
}