# Copyright 2024 The Tungsten Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")
import("//components/nostr/BUILD.gn")

if (enable_nostr) {
  source_set("local_relay") {
    sources = [
      "nostr_database.cc",
      "nostr_database.h",
      "nostr_database_migration.cc",
      "nostr_database_migration.h",
      "nostr_database_schema.h",
    ]

    deps = [
      "//base",
      "//crypto",
      "//sql",
    ]
    
    defines = [ "ENABLE_NOSTR=1" ]
  }

  source_set("local_relay_unittests") {
    testonly = true
    sources = [
      "nostr_database_unittest.cc",
    ]

    deps = [
      ":local_relay",
      "//base",
      "//base/test:test_support",
      "//sql",
      "//sql:test_support",
      "//testing/gtest",
    ]
    
    defines = [ "ENABLE_NOSTR=1" ]
  }
}