# Copyright 2024 The Tungsten Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")

source_set("nsite") {
  sources = [
    "nsite_cache_manager.cc",
    "nsite_cache_manager.h",
    "nsite_header_injector.cc",
    "nsite_header_injector.h",
    "nsite_internals_ui.cc",
    "nsite_internals_ui.h",
    "nsite_metrics.cc",
    "nsite_metrics.h",
    "nsite_security_utils.cc",
    "nsite_security_utils.h",
    "nsite_service.cc",
    "nsite_service.h",
    "nsite_streaming_server.cc",
    "nsite_streaming_server.h",
    "nsite_update_monitor.cc",
    "nsite_update_monitor.h",
    "nsite_notification_manager.cc",
    "nsite_notification_manager.h",
  ]

  deps = [
    "//base",
    "//chrome/browser/profiles",
    "//content/public/browser",
    "//crypto",
    "//extensions/browser/api/web_request",
    "//net",
    "//net:net_with_v8",
    "//services/network/public/cpp",
    "//url",
  ]
}

source_set("performance_tests") {
  testonly = true
  
  sources = [
    "nsite_performance_test.cc",
  ]
  
  deps = [
    ":nsite",
    "//base",
    "//base/test:test_support",
    "//testing/gtest",
    "//testing/perf",
  ]
}

source_set("unit_tests") {
  testonly = true
  
  sources = [
    "nsite_cache_manager_unittest.cc",
    "nsite_header_injector_unittest.cc",
    "nsite_security_utils_unittest.cc",
    "nsite_streaming_server_unittest.cc",
    "nsite_update_monitor_unittest.cc",
    "nsite_notification_manager_unittest.cc",
  ]
  
  deps = [
    ":nsite",
    "//base",
    "//base/test:test_support",
    "//chrome/browser/profiles:test_support",
    "//chrome/test:test_support",
    "//content/test:test_support",
    "//net:test_support",
    "//testing/gtest",
  ]
}